barcode template initial

--- a/Muhasebe/MainForm.resx
+++ b/Muhasebe/MainForm.resx
@@ -1520,113 +1520,113 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC4
-        GAAAAk1TRnQBSQFMAwEBAAFgAQgBYAEIASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACm
+        GAAAAk1TRnQBSQFMAwEBAAF4AQgBeAEIASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
         ASADAAEBAQABIAYAAUD/AP8ATAADAQECAwEBAgMBAQL/AOkAAwEBAgMEAQYDDAEQAxcBIAMiATIDHwEs
         AxIBGAMHAQoDAwEEAwEBAv8AzQADAwEEAwYBCAMNARIDHAEoAy8BSgNIAYUBVwJZAb8BWAJfAeMCWwFe
         AdkDUgGpAz4BagMnAToDFAEcAwkBDAMEAQYDAQEC/wCxAAMBAQIDAwEEAwYBCAMPARQDHQEqAzEBTgNK
-        AY0DWQHHAVMCZAHxAQABEwGSAf8BAAEVAZQB/wEAARYBlAH/AQABBQGBAf8BAAEDAR8B/wNAAf0CWAFf
-        AeMDVgGzA0EBcgMpAT4DFgEeAwkBDAMEAQYDAQEC/wCdAAMBAQIDBgEIAw0BEgMcASgDMgFQA0wBkwFa
-        AlwBzQFCAlkB9QEAARgBlwH/AQABGQGYAf8BAAEaAZgB/wEAARkBmAH/AQABGQGYAf8BAAEZAZcB/wEA
-        AQgBhQH/AQABCQGFAf8BAAEJAYUB/wEAAQkBhQH/AQABBgGDAf8BAAECAYAB/wFYAVoBYgHpAlYBWAG5
-        A0MBeAMpAT4DFgEeAwkBDAMDAQQDAQEC/wCJAAMBAQIDBwEKAxgBIgMyAVADTgGZAVoCXQHTAUECagH5
-        AQABHQGbAf8BAAEdAZsB/wEAAR0BmwH/AQABHQGbAf8BAAEdAZsB/wEAAR0BmwH/AQABHQGbAf8BAAEd
-        AZsB/wEAARwBmgH/AQABCgGIAf8BAAELAYkB/wEAAQsBiQH/AQABCwGJAf8BAAELAYkB/wEAAQsBiQH/
-        AQABCwGJAf8BAAEKAYcB/wEAAQYBhAH/AlgBYgHvAlcBWQG/AUQCRQF8AycBOgMSARgDBAEG/wCFAAMG
-        AQgBSAJJAYcBWQJdAdcCQAGdAf0BAAGBAZ8B/wEAAYEBnwH/AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/
-        AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABgAGeAf8BAAEO
-        AYsB/wEAAQ4BjAH/AQABDgGMAf8BAAEOAYwB/wEAAQ4BjAH/AQABDgGMAf8BAAEOAYwB/wEAAQ4BjAH/
-        AQABDgGMAf8BAAEPAYwB/wEAAQ4BiwH/AQABCgGIAf8BQgJZAfUCWQFbAcMDMwFSAwEBAv8AgQADFwEg
-        AQABiAGoAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGF
-        AaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYQBowH/
-        AQABEQGOAf8BAAERAY8B/wEAAREBjwH/AQABEQGPAf8BAAERAY8B/wEAAREBjwH/AQABEQGPAf8BAAER
-        AY8B/wEAAREBjwH/AQABEQGPAf8BAAERAY8B/wEAAREBjwH/AQABEQGPAf8BAAERAY8B/wFXAloBxQMB
-        AQL/AIEAAxgBIgEAAYwBrAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEA
-        AYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGo
-        Af8BAAGHAaYB/wEAARMBkQH/AQABFAGRAf8BAAEUAZEB/wEAARQBkQH/AQABFAGRAf8BAAEUAZEB/wEA
-        ARQBkQH/AQABFAGSAf8BAAEUAZEB/wEAARQBkQH/AQABFAGRAf8BAAEUAZEB/wEAARQBkQH/AQABFAGR
-        Af8BWQJbAcP/AIUAAxcBIAEAAZABsAH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGM
-        AasB/wEAAYwBqwH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/
-        AQABjAGrAf8BAAGLAaoB/wEAARcBlgH/AQABGAGWAf8BAAEYAZYB/wEAARgBlgH/AQABDQGJAf8BAAER
-        AY0B/wEAARkBmAH/AgABDgH/AQABEAGNAf8BAAEYAZYB/wEAARgBlgH/AQABGAGWAf8BAAEYAZYB/wEA
-        ARgBlgH/AVkCWwHD/wCFAAMWAR4BAAGTAbQB/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/
-        AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/AQABjwGvAf8BAAGP
-        Aa8B/wEAAY8BrwH/AQABjgGuAf8BAAEaAZkB/wEAARsBmQH/AQABGwGZAf8BAAEbAZkB/wEAAQYBgAH/
-        AgABCQH/AQABBgGAAf8CAAEGAf8BAAEIAYIB/wEAARsBmQH/AQABGwGaAf8BAAEbAZkB/wEAARsBmQH/
-        AQABGwGZAf8BVgJYAcH/AIUAAxYBHgEAAZcBuAH/AQABkwGzAf8BAAGTAbMB/wEAAZMBswH/AQABkwGz
-        Af8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGTAbMB/wEA
-        AZMBswH/AQABkwGzAf8BAAGSAbIB/wEAAR0BmwH/AQABHgGcAf8BAAEeAZwB/wEAAR4BnAH/AQABGwGZ
-        Af8CAAEIAf8BAAEMAYcB/wEAAQ0BiAH/AgABFAH/AQABBQEfAf8BAAEBARkB/wEAAR4BnAH/AQABHgGc
-        Af8BAAEeAZwB/wFXAlkBv/8AhQADFgEeAQABnAG8Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGY
-        AbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/
-        AQABmAG3Af8BAAGYAbcB/wEAAZYBtgH/AQABgAGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABEAGLAf8BAAEB
-        ARkB/wEAAQsBhQH/AQABgAGeAf8CAAEXAf8BAAEaAZcB/wIAARYB/wEAARUBkgH/AQABgQGfAf8BAAGB
-        AZ8B/wEAAYEBnwH/AVcCWgG9/wCFAAMUARwBAAGeAb8B/wEAAZsBugH/AQABmwG6Af8BAAGbAboB/wEA
+        AY0DWQHHAVMCZAHxAQABEAGSAf8BAAESAZQB/wEAARMBlAH/AQABAgGBAf8CAAEcAf8DQAH9AlgBXwHj
+        A1YBswNBAXIDKQE+AxYBHgMJAQwDBAEGAwEBAv8AnQADAQECAwYBCAMNARIDHAEoAzIBUANMAZMBWgJc
+        Ac0BQgJZAfUBAAEVAZcB/wEAARYBmAH/AQABFwGYAf8BAAEWAZgB/wEAARYBmAH/AQABFgGXAf8BAAEF
+        AYUB/wEAAQYBhQH/AQABBgGFAf8BAAEGAYUB/wEAAQMBgwH/AgABgAH/AVgBWgFiAekCVgFYAbkDQwF4
+        AykBPgMWAR4DCQEMAwMBBAMBAQL/AIkAAwEBAgMHAQoDGAEiAzIBUANOAZkBWgJdAdMBQQJqAfkBAAEa
+        AZsB/wEAARoBmwH/AQABGgGbAf8BAAEaAZsB/wEAARoBmwH/AQABGgGbAf8BAAEaAZsB/wEAARoBmwH/
+        AQABGQGaAf8BAAEHAYgB/wEAAQgBiQH/AQABCAGJAf8BAAEIAYkB/wEAAQgBiQH/AQABCAGJAf8BAAEI
+        AYkB/wEAAQcBhwH/AQABAwGEAf8CWAFiAe8CVwFZAb8BRAJFAXwDJwE6AxIBGAMEAQb/AIUAAwYBCAFI
+        AkkBhwFZAl0B1wJAAZ0B/QEAAYEBnwH/AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABgQGfAf8BAAGB
+        AZ8B/wEAAYEBnwH/AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABgQGfAf8BAAGAAZ4B/wEAAQsBiwH/
+        AQABCwGMAf8BAAELAYwB/wEAAQsBjAH/AQABCwGMAf8BAAELAYwB/wEAAQsBjAH/AQABCwGMAf8BAAEL
+        AYwB/wEAAQwBjAH/AQABCwGLAf8BAAEHAYgB/wFCAlkB9QJZAVsBwwMzAVIDAQEC/wCBAAMXASABAAGI
+        AagB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/
+        AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhAGjAf8BAAEO
+        AY4B/wEAAQ4BjwH/AQABDgGPAf8BAAEOAY8B/wEAAQ4BjwH/AQABDgGPAf8BAAEOAY8B/wEAAQ4BjwH/
+        AQABDgGPAf8BAAEOAY8B/wEAAQ4BjwH/AQABDgGPAf8BAAEOAY8B/wEAAQ4BjwH/AVcCWgHFAwEBAv8A
+        gQADGAEiAQABjAGsAf8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGo
+        Af8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEA
+        AYcBpgH/AQABEAGRAf8BAAERAZEB/wEAAREBkQH/AQABEQGRAf8BAAERAZEB/wEAAREBkQH/AQABEQGR
+        Af8BAAERAZIB/wEAAREBkQH/AQABEQGRAf8BAAERAZEB/wEAAREBkQH/AQABEQGRAf8BAAERAZEB/wFZ
+        AlsBw/8AhQADFwEgAQABkAGwAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/
+        AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGM
+        AasB/wEAAYsBqgH/AQABFAGWAf8BAAEVAZYB/wEAARUBlgH/AQABFQGWAf8BAAEKAYkB/wEAAQ4BjQH/
+        AQABFgGYAf8CAAELAf8BAAENAY0B/wEAARUBlgH/AQABFQGWAf8BAAEVAZYB/wEAARUBlgH/AQABFQGW
+        Af8BWQJbAcP/AIUAAxYBHgEAAZMBtAH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/AQABjwGvAf8BAAGP
+        Aa8B/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/
+        AQABjwGvAf8BAAGOAa4B/wEAARcBmQH/AQABGAGZAf8BAAEYAZkB/wEAARgBmQH/AQABAwGAAf8CAAEG
+        Af8BAAEDAYAB/wIAAQMB/wEAAQUBggH/AQABGAGZAf8BAAEYAZoB/wEAARgBmQH/AQABGAGZAf8BAAEY
+        AZkB/wFWAlgBwf8AhQADFgEeAQABlwG4Af8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGTAbMB/wEA
+        AZMBswH/AQABkwGzAf8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGTAbMB/wEAAZMBswH/AQABkwGz
+        Af8BAAGTAbMB/wEAAZIBsgH/AQABGgGbAf8BAAEbAZwB/wEAARsBnAH/AQABGwGcAf8BAAEYAZkB/wIA
+        AQUB/wEAAQkBhwH/AQABCgGIAf8CAAERAf8BAAECARwB/wIAARYB/wEAARsBnAH/AQABGwGcAf8BAAEb
+        AZwB/wFXAlkBv/8AhQADFgEeAQABnAG8Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEA
+        AZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3
+        Af8BAAGYAbcB/wEAAZYBtgH/AQABgAGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABDQGLAf8CAAEWAf8BAAEI
+        AYUB/wEAAYABngH/AgABFAH/AQABFwGXAf8CAAETAf8BAAESAZIB/wEAAYEBnwH/AQABgQGfAf8BAAGB
+        AZ8B/wFXAloBvf8AhQADFAEcAQABngG/Af8BAAGbAboB/wEAAZsBugH/AQABmwG6Af8BAAGbAboB/wEA
         AZsBugH/AQABmwG6Af8BAAGbAboB/wEAAZsBugH/AQABmwG6Af8BAAGbAboB/wEAAZsBugH/AQABmwG6
-        Af8BAAGbAboB/wEAAZsBugH/AQABmgG5Af8BAAGDAaMB/wEAAYQBowH/AQABhAGjAf8BAAESAY0B/wIA
-        AQ0B/wEAARUBkQH/AQABgwGiAf8CAAEMAf8BAAELAYQB/wEAAYEBoAH/AQABAwEaAf8BAAEZAZYB/wEA
-        AYQBpAH/AQABhAGjAf8BVwJaAb3/AIUAAxQBHAEAAaEBwwH/AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/
-        AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/Af8BAAGd
-        Ab8B/wEAAZ0BvwH/AQABnQG/Af8BAAGeAb4B/wEAAYYBpwH/AQABhwGnAf8BAAGHAacB/wEAAYgBpwH/
-        AQABgQGgAf8BAAEOAYkB/wEAAYYBpgH/AgABDwH/AQABDwGJAf8BAAELAYUB/wIAAREB/wIAARgB/wEA
-        AYcBpwH/AQABhwGnAf8BVgJYAbv/AIUAAxMBGgECAaUBxwH/AQABoAHDAf8BAAGgAcMB/wEAAaABwwH/
-        AQABoAHDAf8BAAGgAcMB/wEAAaABwwH/AQABoAHCAf8BAAGgAcMB/wEAAaABwwH/AQABoAHDAf8BAAGg
-        AcMB/wEAAaABwwH/AQABoAHDAf8BBAGjAcMB/wEAAYoBqAH/AQABiwGpAf8BAAGLAakB/wEAAYsBqQH/
-        AQABggGfAf8CAAEUAf8BAAGGAaQB/wIAAREB/wEAAQMBGwH/AgABEQH/AgABFAH/AQABCwGDAf8BAAGK
-        AagB/wEAAYsBqQH/AVYCWAG5/wCFAAMTARoBBgGqAcwB/wEEAaUBxwH/AQQBpQHHAf8BBAGlAccB/wEE
-        AaUBxwH/AQQBpQHHAf8BAwGkAcYB/wEAAZ0BvQH/AQQBpQHHAf8BBAGlAccB/wEEAaUBxwH/AQQBpQHH
-        Af8BBAGlAccB/wEDAaUBxwH/AQkBqAHHAf8BAAGMAasB/wEAAY0BrAH/AQABjQGsAf8BAAGNAawB/wEA
-        ARYBkQH/AgABFAH/AQABFQGQAf8CAAETAf8CAAEUAf8CAAEUAf8BAAEfAZwB/wEAAYIBoAH/AQABjQGs
-        Af8BAAGNAawB/wFWAlgBuf8AhQADEwEaAQoBrQHQAf8BBwGpAcsB/wEHAakBywH/AQcBqQHLAf8BBwGp
-        AcsB/wEHAagBygH/AQABnAG7Af8BAQGgAb4B/wEIAakBywH/AQcBqQHLAf8BBwGpAcsB/wEHAakBywH/
-        AQcBqQHLAf8BBwGpAcsB/wEOAawBywH/AQABjwGwAf8BAAGQAbEB/wEAAZABsQH/AQABkAGxAf8BAAGP
-        AbAB/wEAAYsBqgH/AQABkAGwAf8CAAEVAf8BAAEQAYoB/wEAAQEBFwH/AQABGAGSAf8BAAGQAbEB/wEA
-        AZABsQH/AQABkAGxAf8BVgJYAbn/AIUAAxMBGgENAbEB0wH/AQoBrAHOAf8BCgGsAc4B/wEKAawBzgH/
-        AQoBrAHNAf8BAAGdAb0B/wGCAcQB3gH/AYkBygHiAf8BBwGoAckB/wEKAawBzgH/AQoBrAHOAf8BCgGs
-        Ac4B/wEKAawBzgH/AQoBqwHOAf8BEgGwAdAB/wEAAZIBsgH/AQABkwG0Af8BAAGTAbQB/wEAAZMBtAH/
-        AQABkwG0Af8BAAGTAbQB/wEAAZIBsgH/AQABAQEYAf8BAAEYAZMB/wEAARgBkgH/AQABAwEaAf8BAAGP
-        Aa4B/wEAAZMBtAH/AQABkwG0Af8BVgJYAbn/AIUAAxIBGAEQAbQB1wH/AQ4BrwHRAf8BDgGvAdEB/wEO
-        Aa8B0QH/ARABsgHTAf8BiAHLAecB/wGXAdwB9gH/AZUB2QH0Af8BBgGmAccB/wEOAa8B0QH/AQ4BrwHR
-        Af8BDgGvAdEB/wEOAa8B0QH/AQ4BrwHRAf8BFgGzAdIB/wEAAZYBtgH/AQABmAG3Af8BAAGYAbcB/wEA
-        AZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZcBtwH/AQABggGeAf8BAAGAAZwB/wEAAZYBtQH/AQABBwEd
-        Af8BAAEXAZEB/wEAAZgBuAH/AQABmAG3Af8DWAG5/wCFAAMSARgBFAG3Ad0B/wERAbIB1wH/AREBsgHX
-        Af8BEQGyAdcB/wERAbIB1wH/AYoBzwHtAf8BjQHSAe8B/wGPAdQB8QH/AQ8BrwHRAf8BEQGyAdcB/wER
-        AbIB1wH/AREBsgHXAf8BEQGyAdcB/wERAbIB1wH/ARkBtgHXAf8BAAGZAbgB/wEAAZoBugH/AQABmgG6
-        Af8BAAGaAboB/wEAAZoBugH/AQABmgG6Af8BAAGaAboB/wEAAZoBugH/AQABmgG6Af8BAAGaAboB/wEA
-        AY0BqgH/AQABggGeAf8BAAGZAbkB/wEAAZoBugH/A1gBuf8AhQADEgEYARoBvAHhAf8BFgG2AdoB/wEW
-        AbYB2gH/ARYBtgHaAf8BFgG2AdoB/wEeAcIB4wH/AYQBygHpAf8BhAHLAeoB/wEXAbgB2gH/ARYBtgHa
-        Af8BFgG2AdoB/wEWAbYB2gH/ARYBtgHaAf8BFgG2AdoB/wEdAbkB2gH/AQABmwG9Af8BAAGcAb4B/wEA
-        AZwBvgH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+
-        Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8BAAGcAb4B/wNYAbn/AIUAAxIBGAEdAcAB5QH/ARkBugHd
-        Af8BGQG6Ad0B/wEZAboB3QH/ARkBugHdAf8BGQG8Ad8B/wEaAcAB4gH/ARoBwAHiAf8BGQG7Ad4B/wEZ
-        AboB3QH/ARkBugHdAf8BGQG6Ad0B/wEZAboB3QH/ARkBuQHdAf8BHwG8Ad0B/wEAAaABwQH/AQABngHA
-        Af8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEA
-        AZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8DWAG5/wCFAAMSARgBggHEAekB/wEd
-        Ab4B4QH/AR0BvgHhAf8BHQG+AeEB/wEdAb4B4QH/ARYBugHfAf8BDwG3AdsB/wEQAbcB3AH/ARgBuwHf
-        Af8BHQG9AeEB/wEdAb0B4QH/AYABwQHjAf8BiQHIAegB/wGNAc4B7QH/AZEB1QHyAf8BhgHHAeAB/wEb
-        AbgB0gH/AQYBowHCAf8BBgGkAcQB/wEEAaUBxwH/AQABogHEAf8BAQGjAcQB/wEBAaMBxAH/AQEBowHE
-        Af8BAQGjAcQB/wEBAaMBxAH/AQEBowHEAf8BAQGjAcQB/wEBAaMBxAH/A1gBuf8AhQADEgEYAYUBxwHr
-        Af8BgAHAAeUB/wGAAcAB5QH/AYABwAHlAf8BgAHAAeUB/wERAbUB3AH/AQQBrAHVAf8BCwGxAdcB/wGP
-        AckB5wH/AZEB0QHtAf8BjwHTAfAB/wGLAdIB7wH/AYMBzgHtAf8BgAHMAe0B/wGBAcwB7QH/AYABzAHs
-        Af8BggHOAe4B/wGMAdYB8gH/AYIByQHkAf8BHAG+AdcB/wEUAbIBzAH/AQIBoQHAAf8BCQGnAccB/wEJ
-        AakBywH/AQUBpgHIAf8BBQGmAckB/wEFAaYByQH/AQUBpgHJAf8BBQGmAckB/wNYAbn/AIUAAxIBGAGG
-        AccB6wH/AYQBxAHpAf8BhQHFAekB/wGNAcsB6wH/AZUB0AHuAf8BlgHNAekB/wGXAckB5AH/AY8BxAHi
-        Af8BDAGvAdYB/wEEAawB1AH/AQsBtQHbAf8BEwG9AeAB/wEbAcYB5wH/AR4BygHqAf8BHQHJAekB/wEd
-        AckB6QH/AR0ByQHpAf8BHgHKAeoB/wEVAb8B3wH/AQ4BtQHVAf8BGwHAAdwB/wEWAbkB1QH/ARkBvwHc
-        Af8BGgG8AdcB/wEZAbgB0wH/AQwBqwHJAf8BBwGmAcYB/wELAasBzAH/AQcBqQHLAf8DWAG5/wCFAAMG
-        AQgDVwG3A1kB9QGRAdEB7AH/AYYBzAHpAf8BGwHGAecB/wEaAcUB5gH/ARoBxQHlAf8BFQG/AeEB/wEQ
-        AbgB3QH/AQkBsQHXAf8BAQGpAdEB/wEAAaYBzwH/AQABowHNAf8BAAGlAdAB/wEEAa0B1QH/AQsBswHX
-        Af8BGQG7AdgB/wEXAbwB2AH/AR4BxQHhAf8BhQHNAeoB/wEbAcUB5QH/ARgBwwHjAf8BGQHDAeMB/wEY
-        AcMB4wH/ARkBwwHjAf8BgQHKAegB/wGDAcoB5wH/ARsBvwHcAf8DXwHjA0IBdP8AjQADAQECAyABLgM6
-        AWIDTwGXA1wBzQNfAfsBFwHBAeIB/wEYAcIB4wH/ARQBvQHdAf8BCwGyAdIB/wEPAbQB0wH/ARQBuwHc
-        Af8BHAG7Ad0B/wEdAbgB2gH/ARQBsAHWAf8BAAGfAcsB/wEAAZ8BygH/AQABqAHRAf8BCQGxAdcB/wET
-        AbwB3gH/ARcBwQHhAf8BFgHAAeAB/wNdAe0DWAG5A0gBhQMxAU4DEgEY/wCpAAMGAQgDJgE4A0oBiQNe
-        Ad0BgAKoAf0BFgHBAeAB/wETAb0B3QH/ARMBvgHdAf8BEwG+Ad0B/wEOAbkB2gH/AQkBsgHWAf8BCAGu
-        AdMB/wFpAm0B9wNcAckDTAGTAzgBXgMaAST/AM0AAwcBCgMiATIDOAFcA0kBhwNUAa8DUAGbAzwBZgMh
-        ATADAwEE/wD/AP8AswABQgFNAT4HAAE+AwABKAMAAYADAAEgAwABAQEAAQEGAAECFgAD/wEABP8MAAH/
-        AfwBfwH/DAAB/wHgAQcB/wwAAf8CAAH/DAAB8AIAAR8MAAHAAgABAw8AAQEvAAEBDwABAQ8AAQEPAAEB
-        DwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEB
-        DAABwAIAAQcMAAH+AgAB/wwAAf8B4AEPAf8MAAT/DAAL
+        Af8BAAGbAboB/wEAAZoBuQH/AQABgwGjAf8BAAGEAaMB/wEAAYQBowH/AQABDwGNAf8CAAEKAf8BAAES
+        AZEB/wEAAYMBogH/AgABCQH/AQABCAGEAf8BAAGBAaAB/wIAARcB/wEAARYBlgH/AQABhAGkAf8BAAGE
+        AaMB/wFXAloBvf8AhQADFAEcAQABoQHDAf8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEA
+        AZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/
+        Af8BAAGdAb8B/wEAAZ4BvgH/AQABhgGnAf8BAAGHAacB/wEAAYcBpwH/AQABiAGnAf8BAAGBAaAB/wEA
+        AQsBiQH/AQABhgGmAf8CAAEMAf8BAAEMAYkB/wEAAQgBhQH/AgABDgH/AgABFQH/AQABhwGnAf8BAAGH
+        AacB/wFWAlgBu/8AhQADEwEaAQABpQHHAf8BAAGgAcMB/wEAAaABwwH/AQABoAHDAf8BAAGgAcMB/wEA
+        AaABwwH/AQABoAHDAf8BAAGgAcIB/wEAAaABwwH/AQABoAHDAf8BAAGgAcMB/wEAAaABwwH/AQABoAHD
+        Af8BAAGgAcMB/wEBAaMBwwH/AQABigGoAf8BAAGLAakB/wEAAYsBqQH/AQABiwGpAf8BAAGCAZ8B/wIA
+        AREB/wEAAYYBpAH/AgABDgH/AgABGAH/AgABDgH/AgABEQH/AQABCAGDAf8BAAGKAagB/wEAAYsBqQH/
+        AVYCWAG5/wCFAAMTARoBAwGqAcwB/wEBAaUBxwH/AQEBpQHHAf8BAQGlAccB/wEBAaUBxwH/AQEBpQHH
+        Af8BAAGkAcYB/wEAAZ0BvQH/AQEBpQHHAf8BAQGlAccB/wEBAaUBxwH/AQEBpQHHAf8BAQGlAccB/wEA
+        AaUBxwH/AQYBqAHHAf8BAAGMAasB/wEAAY0BrAH/AQABjQGsAf8BAAGNAawB/wEAARMBkQH/AgABEQH/
+        AQABEgGQAf8CAAEQAf8CAAERAf8CAAERAf8BAAEcAZwB/wEAAYIBoAH/AQABjQGsAf8BAAGNAawB/wFW
+        AlgBuf8AhQADEwEaAQcBrQHQAf8BBAGpAcsB/wEEAakBywH/AQQBqQHLAf8BBAGpAcsB/wEEAagBygH/
+        AQABnAG7Af8BAAGgAb4B/wEFAakBywH/AQQBqQHLAf8BBAGpAcsB/wEEAakBywH/AQQBqQHLAf8BBAGp
+        AcsB/wELAawBywH/AQABjwGwAf8BAAGQAbEB/wEAAZABsQH/AQABkAGxAf8BAAGPAbAB/wEAAYsBqgH/
+        AQABkAGwAf8CAAESAf8BAAENAYoB/wIAARQB/wEAARUBkgH/AQABkAGxAf8BAAGQAbEB/wEAAZABsQH/
+        AVYCWAG5/wCFAAMTARoBCgGxAdMB/wEHAawBzgH/AQcBrAHOAf8BBwGsAc4B/wEHAawBzQH/AQABnQG9
+        Af8BggHEAd4B/wGJAcoB4gH/AQQBqAHJAf8BBwGsAc4B/wEHAawBzgH/AQcBrAHOAf8BBwGsAc4B/wEH
+        AasBzgH/AQ8BsAHQAf8BAAGSAbIB/wEAAZMBtAH/AQABkwG0Af8BAAGTAbQB/wEAAZMBtAH/AQABkwG0
+        Af8BAAGSAbIB/wIAARUB/wEAARUBkwH/AQABFQGSAf8CAAEXAf8BAAGPAa4B/wEAAZMBtAH/AQABkwG0
+        Af8BVgJYAbn/AIUAAxIBGAENAbQB1wH/AQsBrwHRAf8BCwGvAdEB/wELAa8B0QH/AQ0BsgHTAf8BiAHL
+        AecB/wGXAdwB9gH/AZUB2QH0Af8BAwGmAccB/wELAa8B0QH/AQsBrwHRAf8BCwGvAdEB/wELAa8B0QH/
+        AQsBrwHRAf8BEwGzAdIB/wEAAZYBtgH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGY
+        AbcB/wEAAZcBtwH/AQABggGeAf8BAAGAAZwB/wEAAZYBtQH/AQABBAEaAf8BAAEUAZEB/wEAAZgBuAH/
+        AQABmAG3Af8DWAG5/wCFAAMSARgBEQG3Ad0B/wEOAbIB1wH/AQ4BsgHXAf8BDgGyAdcB/wEOAbIB1wH/
+        AYoBzwHtAf8BjQHSAe8B/wGPAdQB8QH/AQwBrwHRAf8BDgGyAdcB/wEOAbIB1wH/AQ4BsgHXAf8BDgGy
+        AdcB/wEOAbIB1wH/ARYBtgHXAf8BAAGZAbgB/wEAAZoBugH/AQABmgG6Af8BAAGaAboB/wEAAZoBugH/
+        AQABmgG6Af8BAAGaAboB/wEAAZoBugH/AQABmgG6Af8BAAGaAboB/wEAAY0BqgH/AQABggGeAf8BAAGZ
+        AbkB/wEAAZoBugH/A1gBuf8AhQADEgEYARcBvAHhAf8BEwG2AdoB/wETAbYB2gH/ARMBtgHaAf8BEwG2
+        AdoB/wEbAcIB4wH/AYQBygHpAf8BhAHLAeoB/wEUAbgB2gH/ARMBtgHaAf8BEwG2AdoB/wETAbYB2gH/
+        ARMBtgHaAf8BEwG2AdoB/wEaAbkB2gH/AQABmwG9Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8BAAGc
+        Ab4B/wEAAZwBvgH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/
+        AQABnAG+Af8BAAGcAb4B/wNYAbn/AIUAAxIBGAEaAcAB5QH/ARYBugHdAf8BFgG6Ad0B/wEWAboB3QH/
+        ARYBugHdAf8BFgG8Ad8B/wEXAcAB4gH/ARcBwAHiAf8BFgG7Ad4B/wEWAboB3QH/ARYBugHdAf8BFgG6
+        Ad0B/wEWAboB3QH/ARYBuQHdAf8BHAG8Ad0B/wEAAaABwQH/AQABngHAAf8BAAGfAcEB/wEAAZ8BwQH/
+        AQABnwHBAf8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8BAAGf
+        AcEB/wEAAZ8BwQH/AQABnwHBAf8DWAG5/wCFAAMSARgBggHEAekB/wEaAb4B4QH/ARoBvgHhAf8BGgG+
+        AeEB/wEaAb4B4QH/ARMBugHfAf8BDAG3AdsB/wENAbcB3AH/ARUBuwHfAf8BGgG9AeEB/wEaAb0B4QH/
+        AYABwQHjAf8BiQHIAegB/wGNAc4B7QH/AZEB1QHyAf8BhgHHAeAB/wEYAbgB0gH/AQMBowHCAf8BAwGk
+        AcQB/wEBAaUBxwH/AQABogHEAf8BAAGjAcQB/wEAAaMBxAH/AQABowHEAf8BAAGjAcQB/wEAAaMBxAH/
+        AQABowHEAf8BAAGjAcQB/wEAAaMBxAH/A1gBuf8AhQADEgEYAYUBxwHrAf8BgAHAAeUB/wGAAcAB5QH/
+        AYABwAHlAf8BgAHAAeUB/wEOAbUB3AH/AQEBrAHVAf8BCAGxAdcB/wGPAckB5wH/AZEB0QHtAf8BjwHT
+        AfAB/wGLAdIB7wH/AYMBzgHtAf8BgAHMAe0B/wGBAcwB7QH/AYABzAHsAf8BggHOAe4B/wGMAdYB8gH/
+        AYIByQHkAf8BGQG+AdcB/wERAbIBzAH/AQABoQHAAf8BBgGnAccB/wEGAakBywH/AQIBpgHIAf8BAgGm
+        AckB/wECAaYByQH/AQIBpgHJAf8BAgGmAckB/wNYAbn/AIUAAxIBGAGGAccB6wH/AYQBxAHpAf8BhQHF
+        AekB/wGNAcsB6wH/AZUB0AHuAf8BlgHNAekB/wGXAckB5AH/AY8BxAHiAf8BCQGvAdYB/wEBAawB1AH/
+        AQgBtQHbAf8BEAG9AeAB/wEYAcYB5wH/ARsBygHqAf8BGgHJAekB/wEaAckB6QH/ARoByQHpAf8BGwHK
+        AeoB/wESAb8B3wH/AQsBtQHVAf8BGAHAAdwB/wETAbkB1QH/ARYBvwHcAf8BFwG8AdcB/wEWAbgB0wH/
+        AQkBqwHJAf8BBAGmAcYB/wEIAasBzAH/AQQBqQHLAf8DWAG5/wCFAAMGAQgDVwG3A1kB9QGRAdEB7AH/
+        AYYBzAHpAf8BGAHGAecB/wEXAcUB5gH/ARcBxQHlAf8BEgG/AeEB/wENAbgB3QH/AQYBsQHXAf8BAAGp
+        AdEB/wEAAaYBzwH/AQABowHNAf8BAAGlAdAB/wEBAa0B1QH/AQgBswHXAf8BFgG7AdgB/wEUAbwB2AH/
+        ARsBxQHhAf8BhQHNAeoB/wEYAcUB5QH/ARUBwwHjAf8BFgHDAeMB/wEVAcMB4wH/ARYBwwHjAf8BgQHK
+        AegB/wGDAcoB5wH/ARgBvwHcAf8DXwHjA0IBdP8AjQADAQECAyABLgM6AWIDTwGXA1wBzQNfAfsBFAHB
+        AeIB/wEVAcIB4wH/AREBvQHdAf8BCAGyAdIB/wEMAbQB0wH/AREBuwHcAf8BGQG7Ad0B/wEaAbgB2gH/
+        AREBsAHWAf8BAAGfAcsB/wEAAZ8BygH/AQABqAHRAf8BBgGxAdcB/wEQAbwB3gH/ARQBwQHhAf8BEwHA
+        AeAB/wNdAe0DWAG5A0gBhQMxAU4DEgEY/wCpAAMGAQgDJgE4A0oBiQNeAd0BgAKoAf0BEwHBAeAB/wEQ
+        Ab0B3QH/ARABvgHdAf8BEAG+Ad0B/wELAbkB2gH/AQYBsgHWAf8BBQGuAdMB/wFpAm0B9wNcAckDTAGT
+        AzgBXgMaAST/AM0AAwcBCgMiATIDOAFcA0kBhwNUAa8DUAGbAzwBZgMhATADAwEE/wD/AP8AswABQgFN
+        AT4HAAE+AwABKAMAAYADAAEgAwABAQEAAQEGAAECFgAD/wEABP8MAAH/AfwBfwH/DAAB/wHgAQcB/wwA
+        Af8CAAH/DAAB8AIAAR8MAAHAAgABAw8AAQEvAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8A
+        AQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDAABwAIAAQcMAAH+AgAB/wwA
+        Af8B4AEPAf8MAAT/DAAL
 </value>
   </data>
   <metadata name="Navigation_Strip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
