--- a/Muhasebe/MainForm.resx
+++ b/Muhasebe/MainForm.resx
@@ -1520,110 +1520,110 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAU
-        GAAAAk1TRnQBSQFMAwEBAAH4AQgB+AEIASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
-        ASADAAEBAQABIAYAAUD/AP8ATAADAQECAwEBAgMBAQL/AOkAAwEBAgMEAQYDDAEQAxcBIAMiATIDHwEs
-        AxIBGAMHAQoDAwEEAwEBAv8AzQADAwEEAwYBCAMNARIDHAEoAy8BSgNIAYUBVwJZAb8BWAJfAeMCWwFe
-        AdkDUgGpAz4BagMnAToDFAEcAwkBDAMEAQYDAQEC/wCxAAMBAQIDAwEEAwYBCAMPARQDHQEqAzEBTgNK
-        AY0DWQHHAVMCZAHxAgABkgH/AQABAgGUAf8BAAEDAZQB/wIAAYEB/wIAAQwB/wNAAf0CWAFfAeMDVgGz
-        A0EBcgMpAT4DFgEeAwkBDAMEAQYDAQEC/wCdAAMBAQIDBgEIAw0BEgMcASgDMgFQA0wBkwFaAlwBzQFC
-        AlkB9QEAAQUBlwH/AQABBgGYAf8BAAEHAZgB/wEAAQYBmAH/AQABBgGYAf8BAAEGAZcB/wIAAYUB/wIA
-        AYUB/wIAAYUB/wIAAYUB/wIAAYMB/wIAAYAB/wFYAVoBYgHpAlYBWAG5A0MBeAMpAT4DFgEeAwkBDAMD
-        AQQDAQEC/wCJAAMBAQIDBwEKAxgBIgMyAVADTgGZAVoCXQHTAUECagH5AQABCgGbAf8BAAEKAZsB/wEA
-        AQoBmwH/AQABCgGbAf8BAAEKAZsB/wEAAQoBmwH/AQABCgGbAf8BAAEKAZsB/wEAAQkBmgH/AgABiAH/
-        AgABiQH/AgABiQH/AgABiQH/AgABiQH/AgABiQH/AgABiQH/AgABhwH/AgABhAH/AlgBYgHvAlcBWQG/
-        AUQCRQF8AycBOgMSARgDBAEG/wCFAAMGAQgBSAJJAYcBWQJdAdcCQAGdAf0BAAGBAZ8B/wEAAYEBnwH/
-        AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABgQGfAf8BAAGB
-        AZ8B/wEAAYEBnwH/AQABgAGeAf8CAAGLAf8CAAGMAf8CAAGMAf8CAAGMAf8CAAGMAf8CAAGMAf8CAAGM
-        Af8CAAGMAf8CAAGMAf8CAAGMAf8CAAGLAf8CAAGIAf8BQgJZAfUCWQFbAcMDMwFSAwEBAv8AgQADFwEg
-        AQABiAGoAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGF
-        AaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYQBowH/
-        AgABjgH/AgABjwH/AgABjwH/AgABjwH/AgABjwH/AgABjwH/AgABjwH/AgABjwH/AgABjwH/AgABjwH/
-        AgABjwH/AgABjwH/AgABjwH/AgABjwH/AVcCWgHFAwEBAv8AgQADGAEiAQABjAGsAf8BAAGJAagB/wEA
-        AYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGo
-        Af8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYcBpgH/AgABkQH/AQABAQGRAf8BAAEB
-        AZEB/wEAAQEBkQH/AQABAQGRAf8BAAEBAZEB/wEAAQEBkQH/AQABAQGSAf8BAAEBAZEB/wEAAQEBkQH/
-        AQABAQGRAf8BAAEBAZEB/wEAAQEBkQH/AQABAQGRAf8BWQJbAcP/AIUAAxcBIAEAAZABsAH/AQABjAGr
-        Af8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGMAasB/wEA
-        AYwBqwH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGLAaoB/wEAAQQBlgH/AQABBQGW
-        Af8BAAEFAZYB/wEAAQUBlgH/AgABiQH/AgABjQH/AQABBgGYAf8DAAH/AgABjQH/AQABBQGWAf8BAAEF
-        AZYB/wEAAQUBlgH/AQABBQGWAf8BAAEFAZYB/wFZAlsBw/8AhQADFgEeAQABkwG0Af8BAAGPAa8B/wEA
-        AY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/AQABjwGv
-        Af8BAAGPAa8B/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY4BrgH/AQABBwGZAf8BAAEIAZkB/wEA
-        AQgBmQH/AQABCAGZAf8CAAGAAf8DAAH/AgABgAH/AwAB/wIAAYIB/wEAAQgBmQH/AQABCAGaAf8BAAEI
-        AZkB/wEAAQgBmQH/AQABCAGZAf8BVgJYAcH/AIUAAxYBHgEAAZcBuAH/AQABkwGzAf8BAAGTAbMB/wEA
-        AZMBswH/AQABkwGzAf8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGTAbMB/wEAAZMBswH/AQABkwGz
-        Af8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGSAbIB/wEAAQoBmwH/AQABCwGcAf8BAAELAZwB/wEA
-        AQsBnAH/AQABCAGZAf8DAAH/AgABhwH/AgABiAH/AgABAQH/AgABDAH/AgABBgH/AQABCwGcAf8BAAEL
-        AZwB/wEAAQsBnAH/AVcCWQG//wCFAAMWAR4BAAGcAbwB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEA
-        AZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3
-        Af8BAAGYAbcB/wEAAZgBtwH/AQABlgG2Af8BAAGAAZ8B/wEAAYEBnwH/AQABgQGfAf8CAAGLAf8CAAEG
-        Af8CAAGFAf8BAAGAAZ4B/wIAAQQB/wEAAQcBlwH/AgABAwH/AQABAgGSAf8BAAGBAZ8B/wEAAYEBnwH/
-        AQABgQGfAf8BVwJaAb3/AIUAAxQBHAEAAZ4BvwH/AQABmwG6Af8BAAGbAboB/wEAAZsBugH/AQABmwG6
-        Af8BAAGbAboB/wEAAZsBugH/AQABmwG6Af8BAAGbAboB/wEAAZsBugH/AQABmwG6Af8BAAGbAboB/wEA
-        AZsBugH/AQABmwG6Af8BAAGaAbkB/wEAAYMBowH/AQABhAGjAf8BAAGEAaMB/wIAAY0B/wMAAf8BAAEC
-        AZEB/wEAAYMBogH/AwAB/wIAAYQB/wEAAYEBoAH/AgABBwH/AQABBgGWAf8BAAGEAaQB/wEAAYQBowH/
-        AVcCWgG9/wCFAAMUARwBAAGhAcMB/wEAAZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/
-        Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEA
-        AZ0BvwH/AQABngG+Af8BAAGGAacB/wEAAYcBpwH/AQABhwGnAf8BAAGIAacB/wEAAYEBoAH/AgABiQH/
-        AQABhgGmAf8DAAH/AgABiQH/AgABhQH/AwAB/wIAAQUB/wEAAYcBpwH/AQABhwGnAf8BVgJYAbv/AIUA
-        AxMBGgEAAaUBxwH/AQABoAHDAf8BAAGgAcMB/wEAAaABwwH/AQABoAHDAf8BAAGgAcMB/wEAAaABwwH/
-        AQABoAHCAf8BAAGgAcMB/wEAAaABwwH/AQABoAHDAf8BAAGgAcMB/wEAAaABwwH/AQABoAHDAf8BAAGj
-        AcMB/wEAAYoBqAH/AQABiwGpAf8BAAGLAakB/wEAAYsBqQH/AQABggGfAf8CAAEBAf8BAAGGAaQB/wMA
-        Af8CAAEIAf8DAAH/AgABAQH/AgABgwH/AQABigGoAf8BAAGLAakB/wFWAlgBuf8AhQADEwEaAQABqgHM
-        Af8BAAGlAccB/wEAAaUBxwH/AQABpQHHAf8BAAGlAccB/wEAAaUBxwH/AQABpAHGAf8BAAGdAb0B/wEA
-        AaUBxwH/AQABpQHHAf8BAAGlAccB/wEAAaUBxwH/AQABpQHHAf8BAAGlAccB/wEAAagBxwH/AQABjAGr
-        Af8BAAGNAawB/wEAAY0BrAH/AQABjQGsAf8BAAEDAZEB/wIAAQEB/wEAAQIBkAH/AwAB/wIAAQEB/wIA
-        AQEB/wEAAQwBnAH/AQABggGgAf8BAAGNAawB/wEAAY0BrAH/AVYCWAG5/wCFAAMTARoBAAGtAdAB/wEA
-        AakBywH/AQABqQHLAf8BAAGpAcsB/wEAAakBywH/AQABqAHKAf8BAAGcAbsB/wEAAaABvgH/AQABqQHL
-        Af8BAAGpAcsB/wEAAakBywH/AQABqQHLAf8BAAGpAcsB/wEAAakBywH/AQABrAHLAf8BAAGPAbAB/wEA
-        AZABsQH/AQABkAGxAf8BAAGQAbEB/wEAAY8BsAH/AQABiwGqAf8BAAGQAbAB/wIAAQIB/wIAAYoB/wIA
-        AQQB/wEAAQUBkgH/AQABkAGxAf8BAAGQAbEB/wEAAZABsQH/AVYCWAG5/wCFAAMTARoBAAGxAdMB/wEA
-        AawBzgH/AQABrAHOAf8BAAGsAc4B/wEAAawBzQH/AQABnQG9Af8BggHEAd4B/wGJAcoB4gH/AQABqAHJ
-        Af8BAAGsAc4B/wEAAawBzgH/AQABrAHOAf8BAAGsAc4B/wEAAasBzgH/AQABsAHQAf8BAAGSAbIB/wEA
-        AZMBtAH/AQABkwG0Af8BAAGTAbQB/wEAAZMBtAH/AQABkwG0Af8BAAGSAbIB/wIAAQUB/wEAAQUBkwH/
-        AQABBQGSAf8CAAEHAf8BAAGPAa4B/wEAAZMBtAH/AQABkwG0Af8BVgJYAbn/AIUAAxIBGAEAAbQB1wH/
-        AQABrwHRAf8BAAGvAdEB/wEAAa8B0QH/AQABsgHTAf8BiAHLAecB/wGXAdwB9gH/AZUB2QH0Af8BAAGm
-        AccB/wEAAa8B0QH/AQABrwHRAf8BAAGvAdEB/wEAAa8B0QH/AQABrwHRAf8BAwGzAdIB/wEAAZYBtgH/
-        AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZcBtwH/AQABggGeAf8BAAGA
-        AZwB/wEAAZYBtQH/AgABCgH/AQABBAGRAf8BAAGYAbgB/wEAAZgBtwH/A1gBuf8AhQADEgEYAQEBtwHd
-        Af8BAAGyAdcB/wEAAbIB1wH/AQABsgHXAf8BAAGyAdcB/wGKAc8B7QH/AY0B0gHvAf8BjwHUAfEB/wEA
-        Aa8B0QH/AQABsgHXAf8BAAGyAdcB/wEAAbIB1wH/AQABsgHXAf8BAAGyAdcB/wEGAbYB1wH/AQABmQG4
-        Af8BAAGaAboB/wEAAZoBugH/AQABmgG6Af8BAAGaAboB/wEAAZoBugH/AQABmgG6Af8BAAGaAboB/wEA
-        AZoBugH/AQABmgG6Af8BAAGNAaoB/wEAAYIBngH/AQABmQG5Af8BAAGaAboB/wNYAbn/AIUAAxIBGAEH
-        AbwB4QH/AQMBtgHaAf8BAwG2AdoB/wEDAbYB2gH/AQMBtgHaAf8BCwHCAeMB/wGEAcoB6QH/AYQBywHq
-        Af8BBAG4AdoB/wEDAbYB2gH/AQMBtgHaAf8BAwG2AdoB/wEDAbYB2gH/AQMBtgHaAf8BCgG5AdoB/wEA
-        AZsBvQH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+
-        Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8DWAG5/wCFAAMS
-        ARgBCgHAAeUB/wEGAboB3QH/AQYBugHdAf8BBgG6Ad0B/wEGAboB3QH/AQYBvAHfAf8BBwHAAeIB/wEH
-        AcAB4gH/AQYBuwHeAf8BBgG6Ad0B/wEGAboB3QH/AQYBugHdAf8BBgG6Ad0B/wEGAbkB3QH/AQwBvAHd
-        Af8BAAGgAcEB/wEAAZ4BwAH/AQABnwHBAf8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEA
-        AZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEAAZ8BwQH/A1gBuf8A
-        hQADEgEYAYIBxAHpAf8BCgG+AeEB/wEKAb4B4QH/AQoBvgHhAf8BCgG+AeEB/wEDAboB3wH/AQABtwHb
-        Af8BAAG3AdwB/wEFAbsB3wH/AQoBvQHhAf8BCgG9AeEB/wGAAcEB4wH/AYkByAHoAf8BjQHOAe0B/wGR
-        AdUB8gH/AYYBxwHgAf8BCAG4AdIB/wEAAaMBwgH/AQABpAHEAf8BAAGlAccB/wEAAaIBxAH/AQABowHE
-        Af8BAAGjAcQB/wEAAaMBxAH/AQABowHEAf8BAAGjAcQB/wEAAaMBxAH/AQABowHEAf8BAAGjAcQB/wNY
-        Abn/AIUAAxIBGAGFAccB6wH/AYABwAHlAf8BgAHAAeUB/wGAAcAB5QH/AYABwAHlAf8BAAG1AdwB/wEA
-        AawB1QH/AQABsQHXAf8BjwHJAecB/wGRAdEB7QH/AY8B0wHwAf8BiwHSAe8B/wGDAc4B7QH/AYABzAHt
-        Af8BgQHMAe0B/wGAAcwB7AH/AYIBzgHuAf8BjAHWAfIB/wGCAckB5AH/AQkBvgHXAf8BAQGyAcwB/wEA
-        AaEBwAH/AQABpwHHAf8BAAGpAcsB/wEAAaYByAH/AQABpgHJAf8BAAGmAckB/wEAAaYByQH/AQABpgHJ
-        Af8DWAG5/wCFAAMSARgBhgHHAesB/wGEAcQB6QH/AYUBxQHpAf8BjQHLAesB/wGVAdAB7gH/AZYBzQHp
-        Af8BlwHJAeQB/wGPAcQB4gH/AQABrwHWAf8BAAGsAdQB/wEAAbUB2wH/AQABvQHgAf8BCAHGAecB/wEL
-        AcoB6gH/AQoByQHpAf8BCgHJAekB/wEKAckB6QH/AQsBygHqAf8BAgG/Ad8B/wEAAbUB1QH/AQgBwAHc
-        Af8BAwG5AdUB/wEGAb8B3AH/AQcBvAHXAf8BBgG4AdMB/wEAAasByQH/AQABpgHGAf8BAAGrAcwB/wEA
-        AakBywH/A1gBuf8AhQADBgEIA1cBtwNZAfUBkQHRAewB/wGGAcwB6QH/AQgBxgHnAf8BBwHFAeYB/wEH
-        AcUB5QH/AQIBvwHhAf8BAAG4Ad0B/wEAAbEB1wH/AQABqQHRAf8BAAGmAc8B/wEAAaMBzQH/AQABpQHQ
-        Af8BAAGtAdUB/wEAAbMB1wH/AQYBuwHYAf8BBAG8AdgB/wELAcUB4QH/AYUBzQHqAf8BCAHFAeUB/wEF
-        AcMB4wH/AQYBwwHjAf8BBQHDAeMB/wEGAcMB4wH/AYEBygHoAf8BgwHKAecB/wEIAb8B3AH/A18B4wNC
-        AXT/AI0AAwEBAgMgAS4DOgFiA08BlwNcAc0DXwH7AQQBwQHiAf8BBQHCAeMB/wEBAb0B3QH/AQABsgHS
-        Af8BAAG0AdMB/wEBAbsB3AH/AQkBuwHdAf8BCgG4AdoB/wEBAbAB1gH/AQABnwHLAf8BAAGfAcoB/wEA
-        AagB0QH/AQABsQHXAf8BAAG8Ad4B/wEEAcEB4QH/AQMBwAHgAf8DXQHtA1gBuQNIAYUDMQFOAxIBGP8A
-        qQADBgEIAyYBOANKAYkDXgHdAYACqAH9AQMBwQHgAf8BAAG9Ad0B/wEAAb4B3QH/AQABvgHdAf8BAAG5
-        AdoB/wEAAbIB1gH/AQABrgHTAf8BaQJtAfcDXAHJA0wBkwM4AV4DGgEk/wDNAAMHAQoDIgEyAzgBXANJ
-        AYcDVAGvA1ABmwM8AWYDIQEwAwMBBP8A/wD/ALMAAUIBTQE+BwABPgMAASgDAAGAAwABIAMAAQEBAAEB
-        BgABAhYAA/8BAAT/DAAB/wH8AX8B/wwAAf8B4AEHAf8MAAH/AgAB/wwAAfACAAEfDAABwAIAAQMPAAEB
-        LwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEB
-        DwABAQ8AAQEPAAEBDwABAQwAAcACAAEHDAAB/gIAAf8MAAH/AeABDwH/DAAE/wwACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADs
+        FwAAAk1TRnQBSQFMAwECAAEJAQABCQEgAQABIAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAYADAAEg
+        AwABAQEAASAGAAFA/wD/AEwAAwEBAgMBAQIDAQEC/wDpAAMBAQIDBAEGAwwBEAMXASADIgEyAx8BLAMS
+        ARgDBwEKAwMBBAMBAQL/AM0AAwMBBAMGAQgDDQESAxwBKAMvAUoDSAGFAVcCWQG/AVgCXwHjAlsBXgHZ
+        A1IBqQM+AWoDJwE6AxQBHAMJAQwDBAEGAwEBAv8AsQADAQECAwMBBAMGAQgDDwEUAx0BKgMxAU4DSgGN
+        A1kBxwFTAmQB8QIAAZIB/wEAAQEBlAH/AQABAgGUAf8CAAGBAf8CAAELAf8DQAH9AlgBXwHjA1YBswNB
+        AXIDKQE+AxYBHgMJAQwDBAEGAwEBAv8AnQADAQECAwYBCAMNARIDHAEoAzIBUANMAZMBWgJcAc0BQgJZ
+        AfUBAAEEAZcB/wEAAQUBmAH/AQABBgGYAf8BAAEFAZgB/wEAAQUBmAH/AQABBQGXAf8CAAGFAf8CAAGF
+        Af8CAAGFAf8CAAGFAf8CAAGDAf8CAAGAAf8BWAFaAWIB6QJWAVgBuQNDAXgDKQE+AxYBHgMJAQwDAwEE
+        AwEBAv8AiQADAQECAwcBCgMYASIDMgFQA04BmQFaAl0B0wFBAmoB+QEAAQkBmwH/AQABCQGbAf8BAAEJ
+        AZsB/wEAAQkBmwH/AQABCQGbAf8BAAEJAZsB/wEAAQkBmwH/AQABCQGbAf8BAAEIAZoB/wIAAYgB/wIA
+        AYkB/wIAAYkB/wIAAYkB/wIAAYkB/wIAAYkB/wIAAYkB/wIAAYcB/wIAAYQB/wJYAWIB7wJXAVkBvwFE
+        AkUBfAMnAToDEgEYAwQBBv8AhQADBgEIAUgCSQGHAVkCXQHXAkABnQH9AQABgQGfAf8BAAGBAZ8B/wEA
+        AYEBnwH/AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABgQGfAf8BAAGBAZ8B/wEAAYEBnwH/AQABgQGf
+        Af8BAAGBAZ8B/wEAAYABngH/AgABiwH/AgABjAH/AgABjAH/AgABjAH/AgABjAH/AgABjAH/AgABjAH/
+        AgABjAH/AgABjAH/AgABjAH/AgABiwH/AgABiAH/AUICWQH1AlkBWwHDAzMBUgMBAQL/AIEAAxcBIAEA
+        AYgBqAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGk
+        Af8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGFAaQB/wEAAYUBpAH/AQABhQGkAf8BAAGEAaMB/wIA
+        AY4B/wIAAY8B/wIAAY8B/wIAAY8B/wIAAY8B/wIAAY8B/wIAAY8B/wIAAY8B/wIAAY8B/wIAAY8B/wIA
+        AY8B/wIAAY8B/wIAAY8B/wIAAY8B/wFXAloBxQMBAQL/AIEAAxgBIgEAAYwBrAH/AQABiQGoAf8BAAGJ
+        AagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/
+        AQABiQGoAf8BAAGJAagB/wEAAYkBqAH/AQABiQGoAf8BAAGHAaYB/wIAAZEB/wIAAZEB/wIAAZEB/wIA
+        AZEB/wIAAZEB/wIAAZEB/wIAAZEB/wIAAZIB/wIAAZEB/wIAAZEB/wIAAZEB/wIAAZEB/wIAAZEB/wIA
+        AZEB/wFZAlsBw/8AhQADFwEgAQABkAGwAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGMAasB/wEA
+        AYwBqwH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/AQABjAGrAf8BAAGMAasB/wEAAYwBqwH/AQABjAGr
+        Af8BAAGMAasB/wEAAYsBqgH/AQABAwGWAf8BAAEEAZYB/wEAAQQBlgH/AQABBAGWAf8CAAGJAf8CAAGN
+        Af8BAAEFAZgB/wMAAf8CAAGNAf8BAAEEAZYB/wEAAQQBlgH/AQABBAGWAf8BAAEEAZYB/wEAAQQBlgH/
+        AVkCWwHD/wCFAAMWAR4BAAGTAbQB/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/AQABjwGv
+        Af8BAAGPAa8B/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEAAY8BrwH/AQABjwGvAf8BAAGPAa8B/wEA
+        AY8BrwH/AQABjgGuAf8BAAEGAZkB/wEAAQcBmQH/AQABBwGZAf8BAAEHAZkB/wIAAYAB/wMAAf8CAAGA
+        Af8DAAH/AgABggH/AQABBwGZAf8BAAEHAZoB/wEAAQcBmQH/AQABBwGZAf8BAAEHAZkB/wFWAlgBwf8A
+        hQADFgEeAQABlwG4Af8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGTAbMB/wEAAZMBswH/AQABkwGz
+        Af8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGTAbMB/wEAAZMBswH/AQABkwGzAf8BAAGTAbMB/wEA
+        AZIBsgH/AQABCQGbAf8BAAEKAZwB/wEAAQoBnAH/AQABCgGcAf8BAAEHAZkB/wMAAf8CAAGHAf8CAAGI
+        Af8DAAH/AgABCwH/AgABBQH/AQABCgGcAf8BAAEKAZwB/wEAAQoBnAH/AVcCWQG//wCFAAMWAR4BAAGc
+        AbwB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/
+        AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/AQABlgG2Af8BAAGA
+        AZ8B/wEAAYEBnwH/AQABgQGfAf8CAAGLAf8CAAEFAf8CAAGFAf8BAAGAAZ4B/wIAAQMB/wEAAQYBlwH/
+        AgABAgH/AQABAQGSAf8BAAGBAZ8B/wEAAYEBnwH/AQABgQGfAf8BVwJaAb3/AIUAAxQBHAEAAZ4BvwH/
+        AQABmwG6Af8BAAGbAboB/wEAAZsBugH/AQABmwG6Af8BAAGbAboB/wEAAZsBugH/AQABmwG6Af8BAAGb
+        AboB/wEAAZsBugH/AQABmwG6Af8BAAGbAboB/wEAAZsBugH/AQABmwG6Af8BAAGaAbkB/wEAAYMBowH/
+        AQABhAGjAf8BAAGEAaMB/wIAAY0B/wMAAf8BAAEBAZEB/wEAAYMBogH/AwAB/wIAAYQB/wEAAYEBoAH/
+        AgABBgH/AQABBQGWAf8BAAGEAaQB/wEAAYQBowH/AVcCWgG9/wCFAAMUARwBAAGhAcMB/wEAAZ0BvwH/
+        AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABnQG/Af8BAAGd
+        Ab8B/wEAAZ0BvwH/AQABnQG/Af8BAAGdAb8B/wEAAZ0BvwH/AQABngG+Af8BAAGGAacB/wEAAYcBpwH/
+        AQABhwGnAf8BAAGIAacB/wEAAYEBoAH/AgABiQH/AQABhgGmAf8DAAH/AgABiQH/AgABhQH/AwAB/wIA
+        AQQB/wEAAYcBpwH/AQABhwGnAf8BVgJYAbv/AIUAAxMBGgEAAaUBxwH/AQABoAHDAf8BAAGgAcMB/wEA
+        AaABwwH/AQABoAHDAf8BAAGgAcMB/wEAAaABwwH/AQABoAHCAf8BAAGgAcMB/wEAAaABwwH/AQABoAHD
+        Af8BAAGgAcMB/wEAAaABwwH/AQABoAHDAf8BAAGjAcMB/wEAAYoBqAH/AQABiwGpAf8BAAGLAakB/wEA
+        AYsBqQH/AQABggGfAf8DAAH/AQABhgGkAf8DAAH/AgABBwH/AwAB/wMAAf8CAAGDAf8BAAGKAagB/wEA
+        AYsBqQH/AVYCWAG5/wCFAAMTARoBAAGqAcwB/wEAAaUBxwH/AQABpQHHAf8BAAGlAccB/wEAAaUBxwH/
+        AQABpQHHAf8BAAGkAcYB/wEAAZ0BvQH/AQABpQHHAf8BAAGlAccB/wEAAaUBxwH/AQABpQHHAf8BAAGl
+        AccB/wEAAaUBxwH/AQABqAHHAf8BAAGMAasB/wEAAY0BrAH/AQABjQGsAf8BAAGNAawB/wEAAQIBkQH/
+        AwAB/wEAAQEBkAH/AwAB/wMAAf8DAAH/AQABCwGcAf8BAAGCAaAB/wEAAY0BrAH/AQABjQGsAf8BVgJY
+        Abn/AIUAAxMBGgEAAa0B0AH/AQABqQHLAf8BAAGpAcsB/wEAAakBywH/AQABqQHLAf8BAAGoAcoB/wEA
+        AZwBuwH/AQABoAG+Af8BAAGpAcsB/wEAAakBywH/AQABqQHLAf8BAAGpAcsB/wEAAakBywH/AQABqQHL
+        Af8BAAGsAcsB/wEAAY8BsAH/AQABkAGxAf8BAAGQAbEB/wEAAZABsQH/AQABjwGwAf8BAAGLAaoB/wEA
+        AZABsAH/AgABAQH/AgABigH/AgABAwH/AQABBAGSAf8BAAGQAbEB/wEAAZABsQH/AQABkAGxAf8BVgJY
+        Abn/AIUAAxMBGgEAAbEB0wH/AQABrAHOAf8BAAGsAc4B/wEAAawBzgH/AQABrAHNAf8BAAGdAb0B/wGC
+        AcQB3gH/AYkBygHiAf8BAAGoAckB/wEAAawBzgH/AQABrAHOAf8BAAGsAc4B/wEAAawBzgH/AQABqwHO
+        Af8BAAGwAdAB/wEAAZIBsgH/AQABkwG0Af8BAAGTAbQB/wEAAZMBtAH/AQABkwG0Af8BAAGTAbQB/wEA
+        AZIBsgH/AgABBAH/AQABBAGTAf8BAAEEAZIB/wIAAQYB/wEAAY8BrgH/AQABkwG0Af8BAAGTAbQB/wFW
+        AlgBuf8AhQADEgEYAQABtAHXAf8BAAGvAdEB/wEAAa8B0QH/AQABrwHRAf8BAAGyAdMB/wGIAcsB5wH/
+        AZcB3AH2Af8BlQHZAfQB/wEAAaYBxwH/AQABrwHRAf8BAAGvAdEB/wEAAa8B0QH/AQABrwHRAf8BAAGv
+        AdEB/wECAbMB0gH/AQABlgG2Af8BAAGYAbcB/wEAAZgBtwH/AQABmAG3Af8BAAGYAbcB/wEAAZgBtwH/
+        AQABlwG3Af8BAAGCAZ4B/wEAAYABnAH/AQABlgG1Af8CAAEJAf8BAAEDAZEB/wEAAZgBuAH/AQABmAG3
+        Af8DWAG5/wCFAAMSARgBAAG3Ad0B/wEAAbIB1wH/AQABsgHXAf8BAAGyAdcB/wEAAbIB1wH/AYoBzwHt
+        Af8BjQHSAe8B/wGPAdQB8QH/AQABrwHRAf8BAAGyAdcB/wEAAbIB1wH/AQABsgHXAf8BAAGyAdcB/wEA
+        AbIB1wH/AQUBtgHXAf8BAAGZAbgB/wEAAZoBugH/AQABmgG6Af8BAAGaAboB/wEAAZoBugH/AQABmgG6
+        Af8BAAGaAboB/wEAAZoBugH/AQABmgG6Af8BAAGaAboB/wEAAY0BqgH/AQABggGeAf8BAAGZAbkB/wEA
+        AZoBugH/A1gBuf8AhQADEgEYAQYBvAHhAf8BAgG2AdoB/wECAbYB2gH/AQIBtgHaAf8BAgG2AdoB/wEK
+        AcIB4wH/AYQBygHpAf8BhAHLAeoB/wEDAbgB2gH/AQIBtgHaAf8BAgG2AdoB/wECAbYB2gH/AQIBtgHa
+        Af8BAgG2AdoB/wEJAbkB2gH/AQABmwG9Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8BAAGcAb4B/wEA
+        AZwBvgH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+Af8BAAGcAb4B/wEAAZwBvgH/AQABnAG+
+        Af8BAAGcAb4B/wNYAbn/AIUAAxIBGAEJAcAB5QH/AQUBugHdAf8BBQG6Ad0B/wEFAboB3QH/AQUBugHd
+        Af8BBQG8Ad8B/wEGAcAB4gH/AQYBwAHiAf8BBQG7Ad4B/wEFAboB3QH/AQUBugHdAf8BBQG6Ad0B/wEF
+        AboB3QH/AQUBuQHdAf8BCwG8Ad0B/wEAAaABwQH/AQABngHAAf8BAAGfAcEB/wEAAZ8BwQH/AQABnwHB
+        Af8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEAAZ8BwQH/AQABnwHBAf8BAAGfAcEB/wEA
+        AZ8BwQH/AQABnwHBAf8DWAG5/wCFAAMSARgBggHEAekB/wEJAb4B4QH/AQkBvgHhAf8BCQG+AeEB/wEJ
+        Ab4B4QH/AQIBugHfAf8BAAG3AdsB/wEAAbcB3AH/AQQBuwHfAf8BCQG9AeEB/wEJAb0B4QH/AYABwQHj
+        Af8BiQHIAegB/wGNAc4B7QH/AZEB1QHyAf8BhgHHAeAB/wEHAbgB0gH/AQABowHCAf8BAAGkAcQB/wEA
+        AaUBxwH/AQABogHEAf8BAAGjAcQB/wEAAaMBxAH/AQABowHEAf8BAAGjAcQB/wEAAaMBxAH/AQABowHE
+        Af8BAAGjAcQB/wEAAaMBxAH/A1gBuf8AhQADEgEYAYUBxwHrAf8BgAHAAeUB/wGAAcAB5QH/AYABwAHl
+        Af8BgAHAAeUB/wEAAbUB3AH/AQABrAHVAf8BAAGxAdcB/wGPAckB5wH/AZEB0QHtAf8BjwHTAfAB/wGL
+        AdIB7wH/AYMBzgHtAf8BgAHMAe0B/wGBAcwB7QH/AYABzAHsAf8BggHOAe4B/wGMAdYB8gH/AYIByQHk
+        Af8BCAG+AdcB/wEAAbIBzAH/AQABoQHAAf8BAAGnAccB/wEAAakBywH/AQABpgHIAf8BAAGmAckB/wEA
+        AaYByQH/AQABpgHJAf8BAAGmAckB/wNYAbn/AIUAAxIBGAGGAccB6wH/AYQBxAHpAf8BhQHFAekB/wGN
+        AcsB6wH/AZUB0AHuAf8BlgHNAekB/wGXAckB5AH/AY8BxAHiAf8BAAGvAdYB/wEAAawB1AH/AQABtQHb
+        Af8BAAG9AeAB/wEHAcYB5wH/AQoBygHqAf8BCQHJAekB/wEJAckB6QH/AQkByQHpAf8BCgHKAeoB/wEB
+        Ab8B3wH/AQABtQHVAf8BBwHAAdwB/wECAbkB1QH/AQUBvwHcAf8BBgG8AdcB/wEFAbgB0wH/AQABqwHJ
+        Af8BAAGmAcYB/wEAAasBzAH/AQABqQHLAf8DWAG5/wCFAAMGAQgDVwG3A1kB9QGRAdEB7AH/AYYBzAHp
+        Af8BBwHGAecB/wEGAcUB5gH/AQYBxQHlAf8BAQG/AeEB/wEAAbgB3QH/AQABsQHXAf8BAAGpAdEB/wEA
+        AaYBzwH/AQABowHNAf8BAAGlAdAB/wEAAa0B1QH/AQABswHXAf8BBQG7AdgB/wEDAbwB2AH/AQoBxQHh
+        Af8BhQHNAeoB/wEHAcUB5QH/AQQBwwHjAf8BBQHDAeMB/wEEAcMB4wH/AQUBwwHjAf8BgQHKAegB/wGD
+        AcoB5wH/AQcBvwHcAf8DXwHjA0IBdP8AjQADAQECAyABLgM6AWIDTwGXA1wBzQNfAfsBAwHBAeIB/wEE
+        AcIB4wH/AQABvQHdAf8BAAGyAdIB/wEAAbQB0wH/AQABuwHcAf8BCAG7Ad0B/wEJAbgB2gH/AQABsAHW
+        Af8BAAGfAcsB/wEAAZ8BygH/AQABqAHRAf8BAAGxAdcB/wEAAbwB3gH/AQMBwQHhAf8BAgHAAeAB/wNd
+        Ae0DWAG5A0gBhQMxAU4DEgEY/wCpAAMGAQgDJgE4A0oBiQNeAd0BgAKoAf0BAgHBAeAB/wEAAb0B3QH/
+        AQABvgHdAf8BAAG+Ad0B/wEAAbkB2gH/AQABsgHWAf8BAAGuAdMB/wFpAm0B9wNcAckDTAGTAzgBXgMa
+        AST/AM0AAwcBCgMiATIDOAFcA0kBhwNUAa8DUAGbAzwBZgMhATADAwEE/wD/AP8AswABQgFNAT4HAAE+
+        AwABKAMAAYADAAEgAwABAQEAAQEGAAECFgAD/wEABP8MAAH/AfwBfwH/DAAB/wHgAQcB/wwAAf8CAAH/
+        DAAB8AIAAR8MAAHAAgABAw8AAQEvAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEB
+        DwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDwABAQ8AAQEPAAEBDAABwAIAAQcMAAH+AgAB/wwAAf8B4AEP
+        Af8MAAT/DAAL
 </value>
   </data>
   <metadata name="Navigation_Strip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
